--- a/email_sender/templates/index.html
+++ b/email_sender/templates/index.html
@@ -7,5 +7,8 @@
 <body>
 <h1>email is sent </h1>
 <p>This is my first project which i am going to push on github</p>
+<p>this is my modifile html file using design branch.
+    so firstly i will see this and then i will mege this bfranch and tje i will delete that branch
+</p>
 </body>
 </html>
