we add arti branch

--- a/email_sender/templates/about.html
+++ b/email_sender/templates/about.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is my about page</h1>
     <p>this is my about page which i made using develop branch </p>
+    <p> agin i made new branch for just view all merged and nonmerged branch</p>
 </body>
 </html>
